<resources>
    <string name="app_name">GPS-tracking</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_msg">Ingresa con tu cuenta</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sign_up">¿No tienes cuenta? Registrate</string>
    <string name="signup">Registrarse</string>
    <string name="signup_msg">Crear una nueva cuenta</string>
    <string name="user">Usuario</string>
    <string name="logout">Salir</string>
    <string name="version">1.0</string>
    <string name="creator">Moisés Sánchez</string>
    <string name="checkbox_zoom">Zoom</string>
    <string name="checkbox_compass">Compass</string>
    <string name="checkbox_my_location_layer">My Location</string>
    <string name="checkbox_level_picker">Level Picker</string>
    <string name="checkbox_map_toolbar">Map Toolbar</string>
    <string name="checkbox_zoom_gesture">Zoom Gestures</string>
    <string name="checkbox_scroll_gesture">Scroll Gestures</string>
    <string name="checkbox_tilt_gesture">Tilt Gestures</string>
    <string name="checkbox_rotate_gesture">Rotate Gestures</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>