<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        />

    <TextView
        android:id="@+id/subTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_msg"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titleLabel"
        style="@style/TextAppearance.MaterialComponents.Caption"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTil"
        android:layout_above="@+id/passwordTil"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTil"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@+id/passwordTil"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/accountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        style="@style/TextAppearance.MaterialComponents.Caption"
        />

</RelativeLayout>